--- a/assets/styles/main_style.scss
+++ b/assets/styles/main_style.scss
@@ -543,3 +543,13 @@ $footer-row-one-height: 1.25in;
     cursor: pointer;
     border-bottom: 2px solid;
 }
+
+.lost-angel {
+    background-image: url("../images/WPRenders/LostAngelAnnouncement.png");
+    background-size: cover;
+	background-position: center center;
+	color: white;
+	text-align: center;
+	padding-top: 1in;
+	padding-bottom: 1in;
+}
