--- a/assets/styles/main_style.scss
+++ b/assets/styles/main_style.scss
@@ -418,7 +418,7 @@ body {
         }
 
         .meta {
-
+			
             h2,
             h3 {
                 font-family: "PT_sans";
@@ -426,7 +426,15 @@ body {
 
             div {
                 font-family: "Noto Sans JP";
+				padding-bottom: 5px;
             }
+			
+			.vid-divider {
+				border-top: 2px solid black;
+				padding-top: 10px;
+				
+				padding-bottom: 0px;
+			}
         }
     }
 }
@@ -531,6 +539,18 @@ $footer-row-one-height: 1.25in;
     cursor: pointer;
     border-bottom: 2px solid;
 }
+.frostlight-link {
+    color: black;
+    transition: 250ms;
+    text-decoration: none;
+    border-bottom: 2px solid #adf6ff00;
+}
+
+.frostlight-link:hover {
+    color: #6AF5A5;
+    cursor: pointer;
+    border-bottom: 2px solid;
+}
 .mc-link {
     color: black;
     transition: 250ms;
@@ -542,14 +562,4 @@ $footer-row-one-height: 1.25in;
     color: #11ec1c;
     cursor: pointer;
     border-bottom: 2px solid;
-}
-
-.lost-angel {
-    background-image: url("../images/WPRenders/LostAngelAnnouncement.png");
-    background-size: cover;
-	background-position: center center;
-	color: white;
-	text-align: center;
-	padding-top: 1in;
-	padding-bottom: 1in;
 }
