--- a/assets/styles/rigs.css
+++ b/assets/styles/rigs.css
@@ -25,7 +25,18 @@
   font-size: 16px;
   color: white;
 }
-/* line 29, rigs.scss */
+/* line 28, rigs.scss */
+.about-sacr .title-sacr .title-text .credit {
+  color: white;
+  text-align: center;
+  cursor: pointer;
+  transition: 250ms;
+}
+/* line 34, rigs.scss */
+.about-sacr .title-sacr .title-text .credit:hover {
+  color: lightpink;
+}
+/* line 40, rigs.scss */
 .about-sacr .title-sacr .title-bg {
   content: inherit;
   background-color: #fff5f525;
@@ -37,7 +48,7 @@
   background-position: 0in -2.5in;
 }
 
-/* line 43, rigs.scss */
+/* line 54, rigs.scss */
 .rig-download-section {
   height: 2in;
   background-color: #333;
@@ -46,15 +57,15 @@
   color: #fff5f5;
   display: flex;
 }
-/* line 51, rigs.scss */
+/* line 62, rigs.scss */
 .rig-download-section h1 {
   font-family: PT_Sans;
 }
-/* line 55, rigs.scss */
+/* line 66, rigs.scss */
 .rig-download-section span {
   font-family: "Roboto";
 }
-/* line 59, rigs.scss */
+/* line 70, rigs.scss */
 .rig-download-section .download-lr {
   background-color: transparent;
   border: none;
@@ -85,60 +96,67 @@
   font-family: PT_Sans;
   cursor: pointer;
 }
-/* line 92, rigs.scss */
+/* line 103, rigs.scss */
 .rig-download-section .download-lr:hover {
   background-color: #13b6fb95;
   -webkit-box-shadow: 0 4px 0 0 #04a7eb95;
   box-shadow: 0 4px 0 0 #04a7eb95;
 }
-/* line 98, rigs.scss */
+/* line 109, rigs.scss */
 .rig-download-section .download-extra {
   text-decoration: none;
 }
-/* line 102, rigs.scss */
+/* line 113, rigs.scss */
 .rig-download-section .download-extra:hover {
   text-decoration: underline;
   cursor: pointer;
 }
-/* line 107, rigs.scss */
+/* line 118, rigs.scss */
 .rig-download-section .rds-col {
   flex-basis: 50%;
 }
-/* line 110, rigs.scss */
+/* line 121, rigs.scss */
 .rig-download-section .rds-col img {
   position: relative;
   transform: translateY(-15%);
+  transition: 250ms;
+  box-shadow: 0 0 3px black;
+  cursor: pointer;
 }
-/* line 116, rigs.scss */
+/* line 128, rigs.scss */
+.rig-download-section .rds-col img:hover {
+  box-shadow: 0 0 10px black;
+}
+/* line 134, rigs.scss */
 .rig-download-section .rds-background {
   flex-basis: 25%;
   min-width: 600px;
 }
 
-/* line 124, rigs.scss */
+/* line 143, rigs.scss */
 .features-sacr {
   margin-left: 1in;
   margin-right: 1in;
 }
-/* line 128, rigs.scss */
+/* line 147, rigs.scss */
 .features-sacr h2 {
   font-family: PT_Sans;
   text-align: center;
   font-size: 36px;
 }
-/* line 134, rigs.scss */
+/* line 153, rigs.scss */
 .features-sacr .highlight-features {
   width: 1000px;
   margin: 0 auto;
   background-color: #f3f3f3;
   padding: 10px;
 }
-/* line 140, rigs.scss */
+/* line 159, rigs.scss */
 .features-sacr .highlight-features h2 {
   text-align: left;
   font-size: 24px;
 }
-/* line 146, rigs.scss */
+/* line 165, rigs.scss */
 .features-sacr .highlight-features .row-1-col .feat-overlay {
   font-family: "Noto Sans JP";
   height: 100px;
